Подключен шрифт и добавлены css переменные для цветов

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@
     grid-template-columns: 200px 1fr;
     grid-template-rows: min-content 1fr min-content;
     font-family: 'Roboto', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    --main-color: gold;
+    --main-bg-color: lightgrey;
+    --cards-bg-color: grey;
 }
 
 .header {
@@ -17,7 +20,7 @@
     align-items: center;
     grid-column: 1 / 3;
     height: 100px;
-    background-color:gold;
+    background-color: var(--main-color);
     padding: 4px 40px;
     font-size: 18px;
     border-bottom: 2px solid black;
@@ -52,7 +55,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 20px;
-    background-color:grey;
+    background-color: grey;
     border-right: 2px solid black;
     width: 100%;
     height: 100%;
@@ -64,7 +67,7 @@
     grid-column: 1 / 3;
     height: 100px;
     padding: 10px 40px;
-    background-color: gold ;
+    background-color: var(--main-color);
     font-size: 18px;
     border-top: 2px solid black;
     width: 100%;
@@ -93,7 +96,7 @@
 }
 
 .option:hover {
-    color: gold;
+    color: var(--main-color);
 }
 
 .additional_nav {
@@ -104,7 +107,7 @@
 .other-option {
     margin-bottom: 30px;
     cursor: pointer;
-    color: gold;
+    color: var(--main-color);
 }
 
 .other-option:hover {
@@ -123,7 +126,7 @@
 
 .content {
     padding: 5px;
-    background-color: lightgrey;
+    background-color: var(--main-bg-color);
     width: 100%;
     height: 100%;
 }
@@ -143,7 +146,7 @@
 .card {
     width: 250px;
     height: 300px;
-    background-color: grey;
+    background-color: var(--cards-bg-color);
     border-radius: 5px;
     overflow: hidden;
     font-family: inherit;
@@ -170,7 +173,7 @@
 }
 
 .card-music-title:hover {
-    color: gold;
+    color: var(--main-color);
 }
 
 .card-artist {
