--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
     overflow: auto;
     grid-template-columns: 200px 1fr;
     grid-template-rows: min-content 1fr min-content;
-    font-family: 'Roboto', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
     --main-color: gold;
     --main-bg-color: lightgrey;
     --cards-bg-color: grey;
@@ -53,7 +53,8 @@
 .side_panel {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 2%;
     padding: 20px;
     background-color: grey;
     border-right: 2px solid black;
@@ -76,34 +77,38 @@
     bottom: 0;
 }
 
-.container {
+.search_panel {
     padding: 20px;
 }
 
 .search_form {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     gap: 20px;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
 
 .option_title {
-    font-size: x-large;
+    font-size: 36px;
     padding-right: 10px;
 }
 
 .select_option {
     width: 300px;
     padding: 10px;
-    background: var(--main-color);
     border-radius: 5px;
-    font-size: large;
+    font-size: 24px;
+}
+
+.select_option:nth-child(even) {
+    margin-top: 1%;
+    margin-left: 0.5%;
 }
 
 .btn_search {
-    padding: 14px;
+    margin-left: 1%;
+    padding: 14px 120px;
     border: 1px black solid;
     border-radius: 5px;
 }
@@ -116,6 +121,34 @@
     gap: 15px;
     text-decoration: none;
 }
+
+.tracks_list {
+    display: flex;
+    justify-content: flex-start;
+    margin: 1%;
+    gap: 5%;
+}
+
+.list-group.song-list a {
+    font-size: 26px;
+    text-decoration: none;
+    color: black;
+}
+
+.list-group.song-list a:focus {
+    color: var(--cards-bg-color);
+}
+
+.track_details {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 20%;
+}
+
+.form-label-genre {
+    font-size: 32px;}
 
 .audio {
     margin: auto;
@@ -180,19 +213,20 @@
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 300px);
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 20px;
     margin: 1%;
 } 
 
 .card {
-    width: 250px;
+    max-width: 300px;
     height: 300px;
     background-color: var(--cards-bg-color);
     border-radius: 5px;
     overflow: hidden;
     font-family: inherit;
-    margin-top: 20px;
+    margin-top: 2%;
+    margin-left: 1%;
 }
 
 .card-image {
