--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url(https://allfont.ru/allfont.css?fonts=anklepants);
-
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +9,10 @@
     overflow: auto;
     grid-template-columns: 200px 1fr;
     grid-template-rows: min-content 1fr min-content;
-    font-family: 'Cooper Black';
+    font-family: 'Roboto', Arial, sans-serif;
+    --main-color: gold;
+    --main-bg-color: lightgrey;
+    --cards-bg-color: grey;
 }
 
 .header {
@@ -19,7 +20,7 @@
     align-items: center;
     grid-column: 1 / 3;
     height: 100px;
-    background-color:gold;
+    background-color: var(--main-color);
     padding: 4px 40px;
     font-size: 18px;
     border-bottom: 2px solid black;
@@ -52,9 +53,9 @@
 .side_panel {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 20px;
-    background-color:grey;
+    background-color: grey;
     border-right: 2px solid black;
     width: 100%;
     height: 100%;
@@ -66,7 +67,7 @@
     grid-column: 1 / 3;
     height: 100px;
     padding: 10px 40px;
-    background-color: gold ;
+    background-color: var(--main-color);
     font-size: 18px;
     border-top: 2px solid black;
     width: 100%;
@@ -75,39 +76,113 @@
     bottom: 0;
 }
 
+.search_panel {
+    padding: 20px;
+}
+
+.search_form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.option_title {
+    font-size: 36px;
+    padding-right: 10px;
+}
+
+.select_option {
+    width: 300px;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 24px;
+}
+
+.select_option:nth-child(even) {
+    margin-top: 1%;
+    margin-left: 0.5%;
+}
+
+.btn_search {
+    margin-left: 1%;
+    padding: 14px 120px;
+    border: 1px black solid;
+    border-radius: 5px;
+}
+
+.tracks_list {
+    display: flex;
+    justify-content: flex-start;
+    margin: 1%;
+    gap: 5%;
+}
+
+.list-group-item {
+    font-size: 26px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 15px;
+    text-decoration: none;
+    color: black;
+}
+
+.list-group-item:focus {
+    color: var(--cards-bg-color);
+}
+
+.track_details {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 50%;
+    gap: 10%;
+}
+
+.form-label-genre {
+    font-size: 32px;
+}
+
+.audio {
+    margin: auto;
+    width: 30%;
+}
+
 .footer__navigation {
     display: flex;
     flex-direction: column;
 }
 
-.tags {
+.main_nav {
     list-style: none;
     font-size: 22px;
 }
 
-.tag {
+.option {
     margin-bottom: 30px;
     cursor: pointer;
 }
 
-.tag:hover {
-    color: gold;
+.option:hover {
+    color: var(--main-color);
 }
 
-.other-tags {
+.additional_nav {
     list-style: none;
     font-size: 18px;
-    position: sticky;
-    bottom: 13%;
 }
 
-.other-tag {
+.other-option {
     margin-bottom: 30px;
     cursor: pointer;
-    color: gold;
+    color: var(--main-color);
 }
 
-.other-tag:hover {
+.other-option:hover {
     color: black;
 }
 
@@ -123,7 +198,7 @@
 
 .content {
     padding: 5px;
-    background-color: lightgrey;
+    background-color: var(--main-bg-color);
     width: 100%;
     height: 100%;
 }
@@ -134,27 +209,21 @@
 }
 
 .cards {
-    /* display: grid; */
-    /* flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap; */
-    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-    flex-wrap: wrap;
-    display: flex;
-}
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
+    margin: 1%;
+} 
 
 .card {
-    position: relative;
-    margin: 1%;
-    /* float: left; */
-    width: 250px;
+    max-width: 300px;
     height: 300px;
-    background-color: grey;
+    background-color: var(--cards-bg-color);
     border-radius: 5px;
     overflow: hidden;
     font-family: inherit;
-    /* margin-left: 20px; */
-    margin-top: 20px;
+    margin-top: 2%;
+    margin-left: 1%;
 }
 
 .card-image {
@@ -171,21 +240,21 @@
     font-size: inherit;
 }
 
-.card-title a {
+.card-music-title {
     text-decoration: none;
     color: inherit;
 }
 
-.card-title:hover a{
-    color: gold;
+.card-music-title:hover {
+    color: var(--main-color);
 }
 
 .card-artist {
     font-size: 16px;
-    padding-top: 8px;
+    padding-top: 6px;
 }
 
-.card-artist a {
+.artist {
     text-decoration: none;
     color: white;
 }
